2006-05-15  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/elmatfunc.cpp, itpp/base/elmatfunc.h: Finally fixed
	the declaration of `signgam' and definition and lgamma() function.
	This should solve problems on systems where lgamma() does not set
	`signgam' variable, e.g. under MinGW.

2006-05-11  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/fix_test.cpp, tests/fix_test.ref, tests/llr_test.cpp,
	tests/llr_test.ref, tests/window_test.cpp, tests/window_test.ref:
	More "dirty" hacks added due to a floating-point rounding error
	under MinGW compiler.

	* doc/local/installation.doc, INSTALL: Updated documentation
	according to the recent changes.

	* config/acx_fft.m4: Changed the order of checking for FFT
	libraries.

2006-05-10  Adam Piatyszek  <ediap@users.sourceforge.net>

	* tests/source_test.cpp, tests/source_test.ref,
	tests/window_test.cpp, tests/window_test.ref: Minor fixes in test
	programs due to different formatting under MinGW environment.

	* test/Makefile.am: Added a dirty hack using sed regular expresion
	that ensures floating point output in the form of `e-06' instead
	of `e-006', which is default for the MinGW compiler.

	* configure.ac: Check for a host added, which is used to disable
	building of a shared library on Windows based platforms.

2006-05-09  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/config_msvc.h: Manually updated the config header for
	MSVC++ .NET with MKL.

	* itpp/base/timing.cpp: Fixed gettimeofday() function definition
	for Windows based platforms (MinGW, MSVC++). No need for MINGW
	definition any more.

	* configure.ac, itpp/base/elmatfunc.cpp, itpp/base/elmatfunc.h:
	Added checks for `lgamma' and `tgamma' functions, and `signgam'
	declaration. This solves problems on some platforms where these
	declaration and/or functions are not available.

	* itpp/base/random.cpp: Added missing include file (undefined
	gamma function).

	* configure.ac, Makefile.am, tests/Makefile.am: Fixed a problem